@@ -1139,16 +1139,20 @@ class IMP_Ajax_Application_Handler_Dynamic extends Horde_Core_Ajax_Application_H
      *
      * @return object  An object with the following properties:
      * <pre>
-     *   - url: (string) The URL of the image.
+     *   - flagimg: (string) An IMG tag with the country flag of the sender.
+     *   - url: (string) The URL of the contacts image.
      * </pre>
      */
     public function getContactsImage()
     {
+        $out = new stdClass;
         try {
-            $out = new stdClass;
             $out->url = strval(new IMP_Contacts_Image($this->vars->addr));
-        } catch (IMP_Exception $e) {
-            $out = false;
+        } catch (IMP_Exception $e) {}
+
+        $addr = new Horde_Mail_Rfc822_Address($this->vars->addr);
+        if ($flag = Horde_Core_Ui_FlagImage::generateFlagImageByHost($addr->host)) {
+            $out->flagimg = $flag;
         }
 
         return $out;
