@@ -2,6 +2,7 @@
 v6.2.0-git
 ----------
 
+[mms] Add country flag graphic to contact image information in dynamic view.
 [mms] Address autocompleter on dynamic and basic page now uses a fancy UI.
 [mms] Add ability to specify maximum total attachment size in composed message
       before all attachments are converted to links.
